1 加入崩溃日志，保存在sdcard/JLog/目录下 2 点选单个点时加入提示

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
         运行条件：\n
         1. 手机已root且给予本程序su权限 \n
         2. 带权限管理的手机给予本程序显示悬浮窗权限。\n
+        3. 给予读写内存卡权限，程序闪退会保存日志到JLog目录下。\n
     </string>
 </resources>
